Modified all occurrences of (deprecated) calls to constructors of wrapper classes into their static valueOf() equivalent